--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,6 +15,12 @@
   <%= form_for resource, as: resource_name, url: registration_path(resource_name), data: { controller: "form-validation" }, html: { method: :put, novalidate: true } do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
+    <div class="form-group">
+      <%= f.label :display_name, class: "form-label" %>
+      <%= f.text_field :display_name, class: "form-input", data: { form_validation_target: "displayName", action: "input->form-validation#validateDisplayName" } %>
+      <span class="error-message hidden my-1" data-form-validation-target="displayNameError">Display name must be 100 characters or less</span>
+    </div>
+
     <div class='form-group'>
       <%= f.label :username, class: "form-label" %>
       <%= f.text_field :username, class: "form-input", data: { form_validation_target: "username", action: "input->form-validation#validateUsername" } %>
@@ -83,7 +89,7 @@
     <div class='form-group'>
       <%= f.label :current_password, 'Current password', class: "form-label" %>
       <div class="flex items-center" data-controller="password-visibility">
-        <%= f.password_field :current_password, autocomplete: "current-password", class: "form-input", data: { password_visibility_target: "password" } %>
+        <%= f.password_field :current_password, autocomplete: "current-password", class: "form-input w-full", data: { password_visibility_target: "password" } %>
 
         <button type="button" class="-ml-9" data-action="password-visibility#toggle">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" data-password-visibility-target="visibleIcon">
