--- a/app/views/teams/_members.html.erb
+++ b/app/views/teams/_members.html.erb
@@ -7,8 +7,10 @@
     <div class="py-6">
       <div class="flex gap-3 items-center justify-between">
         <div>
-          <h2 class='subheading'><%= link_to member.username, member, class: 'hover:text-indigo-600 transition ease-in-out duration-300' %></h2>
-          <p class='help-text'><%= member.email %></p>
+          <h2 class='subheading'><%= link_to member.display_name.present? ? member.display_name : member.username, member, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></h2>
+          <% if member.display_name.present? %>
+            <p class="help-text"><%= member.username %></p>
+          <% end %>
         </div>
 
         <div>
