--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-between flex-wrap gap-y-3">
   <div>
-    <p class="subheading"><%= link_to team.name, team, class: 'hover:text-indigo-600 transition ease-in-out duration-300' %></p>
-    <p class="help-text"><%= link_to team.owner.username, team.owner, class: 'hover:text-indigo-600 transition ease-in-out duration-300' %></p>
+    <p class="subheading mb-0.5"><%= link_to team.name, team, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
+    <p class="help-text"><%= link_to team.owner.display_name.present? ? team.owner.display_name : team.owner.username, team.owner, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
     <% if team.season_dates? %>
       <% if team.season_start_date.after?(Date.today) %>
         <p class="text-slate-700 dark:text-slate-400 text-sm mt-1">Season starts <%= pretty_date(team.season_start_date) %></p>
