--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,17 @@
 <div class="max-w-3xl mx-auto px-4 my-16">
   <div class="pb-6 border-b dark:border-slate-700 text-center">
-    <h1 class="heading">User's Name Here</h1>
-    <h2 class="text-lg text-slate-700 my-1 dark:text-slate-400"><%= @user.username %></h2>
+    <h1 class="heading"><%= @user.display_name.present? ? @user.display_name : @user.username %></h1>
+    <% if @user.display_name.present? %>
+      <h2 class="text-lg text-slate-700 my-1 dark:text-slate-400"><%= @user.username %></h2>
+
+    <% elsif @user == current_user %>
+      <p class="mt-1">
+        <%= link_to 'Add a display name to your profile', edit_user_registration_path, class: 'text-sm text-slate-700 dark:text-slate-400 hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
+      </p>
+    <% end %>
+
     <% if @user == current_user %>
-      <div class="flex items-center justify-center md:justify-end">
+      <div class="flex items-center justify-center md:justify-end mt-4">
         <%= link_to 'Edit profile', edit_user_registration_path, class: 'btn btn-white' %>
       </div>
     <% end %>
@@ -36,7 +44,7 @@
             <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You haven't gone on any runs yet today.</p>
             <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
           <% else %>
-            <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user.username %> hasn't gone on any runs yet today.</p>
+            <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user.display_name.present? ? @user.display_name : @user.username %> hasn't gone on any runs yet today.</p>
           <% end %>
         </div>
       <% end %>
@@ -59,7 +67,7 @@
         <% end %>
       <% else %>
         <div class="flex flex-col gap-6 items-center justify-center py-12">
-          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user == current_user ? "You haven't gone on any runs yet this week." : "#{@user.username} hasn't gone on any runs yet this week." %></p>
+          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user == current_user ? "You haven't gone on any runs yet this week." : "#{@user.display_name.present? ? @user.display_name : @user.username} hasn't gone on any runs yet this week." %></p>
         </div>
       <% end %>
     </div>
@@ -81,7 +89,7 @@
         <% end %>
       <% else %>
         <div class="flex flex-col gap-6 items-center justify-center py-12">
-          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user == current_user ? "You didn't go on any runs last week." : "#{@user.username} didn't go on any runs last week." %></p>
+          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400"><%= @user == current_user ? "You didn't go on any runs last week." : "#{@user.display_name.present? ? @user.display_name : @user.username} didn't go on any runs last week." %></p>
         </div>
       <% end %>
     </div>
