--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <%= render "shared/sidebar" %>
       <div class="flex h-full flex-1 flex-col">
         <div class="flex h-full flex-col justify-between overflow-y-scroll">
-          <main class="container mx-auto mt-48 mb-24 px-5">
+          <main class="container mx-auto my-24 px-5">
             <%= yield %>
           </main>
         </div>
