refactor run quick buttons logic

--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -13,15 +13,15 @@
     </div>
 
     <div class="form-group flex flex-wrap items-center gap-3 -mt-2 select-none">
-      <button type="button" data-action="click->distance-shortcuts#decrementDistance click->form-validation#validateDistance" data-decrement-value="1" class="btn btn-sm btn-white">-</button>
-      <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-distance-value="1" class="btn btn-sm btn-white">1 mile</button>
-      <button type="button" data-action="click->distance-shortcuts#incrementDistance click->form-validation#validateDistance" data-increment-value="1" class="btn btn-sm btn-white">+</button>
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-1" class="btn btn-sm btn-white">-</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-set-distance-value="1" class="btn btn-sm btn-white">1 mile</button>
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="1" class="btn btn-sm btn-white">+</button>
     </div>
 
     <div class="form-group flex flex-wrap items-center gap-3 -mt-2 select-none">
-      <button type="button" data-action="click->distance-shortcuts#decrementDistance click->form-validation#validateDistance" data-decrement-value="5" class="btn btn-sm btn-white">-</button>
-      <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-distance-value="5" class="btn btn-sm btn-white">5 miles</button>
-      <button type="button" data-action="click->distance-shortcuts#incrementDistance click->form-validation#validateDistance" data-increment-value="5" class="btn btn-sm btn-white">+</button>
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-5" class="btn btn-sm btn-white">-</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-set-distance-value="5" class="btn btn-sm btn-white">5 miles</button>
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="5" class="btn btn-sm btn-white">+</button>
     </div>
   </div>
 
