--- a/app/views/shared/_tab_bar.html.erb
+++ b/app/views/shared/_tab_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="z-50 fixed inset-x-0 bottom-0 w-full block bg-slate-50 opacity-100 dark:bg-slate-800 border-t dark:border-slate-700 pb-1 md:hidden">
+<div class="z-50 fixed inset-x-0 bottom-0 w-full block bg-slate-50 dark:bg-slate-800 border-t dark:border-slate-700 pb-1 md:hidden">
   <nav class="grid grid-cols-5 place-items-center gap-y-4 w-full">
     <% links = tab_links %>
     <% first_two_links, last_two_links = links[0, 2], links[-2, 2] %>
