--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -111,10 +111,10 @@
     </div>
   <% end %>
 
-  <div class="flex justify-end">
+  <div class="flex justify-end mt-3">
     <%= button_to "Cancel account", registration_path(resource_name),
                   method: :delete,
-                  class: "text-slate-400 hover:text-slate-600 font-semibold text-sm relative -top-8",
+                  class: "text-slate-400 hover:text-slate-600 font-semibold text-sm",
                   form: {
                     data: {
                       turbo: false,
