--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -45,25 +45,20 @@
     <%= form.text_area :comments, placeholder: 'Add comments...', class: 'form-input', data: { controller: 'autogrow', action: 'input->autogrow#grow' } %>
   </div>
 
-  <div class="flex items-center justify-between flex-wrap">
-    <div class="sm:flex-1 sm:mb-0 mb-6">
-      <% if form.object.new_record? %>
-        <%= form.submit 'Create run', class: 'btn btn-primary' %>
-      <% else %>
-        <%= form.submit 'Update run', class: 'btn btn-primary' %>
-      <% end %>
-    </div>
+  <div class="flex items-center justify-start flex-wrap gap-6">
+    <% if form.object.new_record? %>
+      <%= form.submit 'Create run', class: 'btn btn-primary' %>
+    <% else %>
+      <%= form.submit 'Update run', class: 'btn btn-primary' %>
 
-    <div class="flex gap-6 items-center">
-      <% unless form.object.new_record? %>
-        <%= link_to "Delete", @run,
-                      class: "btn btn-destructive btn-outline",
-                      data: {
-                        turbo_method: :delete,
-                        turbo_confirm: 'Are you sure you want to delete this run?'
-                      } %>
-      <% end %>
-      <%= link_to "Cancel", :back, class: "btn btn-white" %>
-    </div>
+      <%= link_to "Delete run", @run,
+                    class: "btn btn-destructive btn-outline mr-auto",
+                    data: {
+                      turbo_method: :delete,
+                      turbo_confirm: 'Are you sure you want to delete this run?'
+                    } %>
+    <% end %>
+
+    <%= link_to "Cancel", :back, class: "btn btn-white" %>
   </div>
 <% end %>
