--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,6 +38,16 @@
       <span class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</span>
     </div>
 
+    <div class="form-group">
+      <%= f.label :phone_number, class: "form-label" do %>
+        <p> Phone number
+          <span class="help-text">(optional)</span>
+        </p>
+      <% end %>
+      <%= f.telephone_field :phone_number, autocomplete: 'tel', class: 'form-input', data: { form_validation_target: "phone", action: "input->form-validation#validatePhone input->form-validation#filterPhoneInput" } %>
+      <span class="error-message hidden my-1" data-form-validation-target="phoneError">Invalid phone number</span>
+    </div>
+
     <div class='form-group relative'>
       <%= f.label :password, 'New password', class: "form-label" %>
       <div class="flex items-center" data-controller="password-visibility">
