--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -13,6 +13,12 @@
     </div>
 
     <div class="form-group flex flex-wrap items-center gap-3 -mt-2 select-none">
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-0.1" class="btn btn-sm btn-white">-</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-set-distance-value="0.1" class="btn btn-sm btn-white">0.1 miles</button>
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="0.1" class="btn btn-sm btn-white">+</button>
+    </div>
+
+    <div class="form-group flex flex-wrap items-center gap-3 -mt-2 select-none">
       <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-1" class="btn btn-sm btn-white">-</button>
       <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-set-distance-value="1" class="btn btn-sm btn-white">1 mile</button>
       <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="1" class="btn btn-sm btn-white">+</button>
