--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="pb-6 border-b dark:border-slate-700 text-center">
     <h1 class="heading"><%= @user.display_name.present? ? @user.display_name : @user.username %></h1>
     <% if @user.display_name.present? %>
-      <h2 class="text-lg text-slate-700 my-1 dark:text-slate-400"><%= @user.username %></h2>
+      <h2 class="text-lg my-1 text-slate-700 dark:text-slate-400"><%= @user.username %></h2>
 
     <% elsif @user == current_user %>
       <p class="mt-1">
