--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,15 +1,22 @@
 <div class="hidden h-full flex-[0.3] min-w-72 md:block">
-  <!-- left sidebar -->
   <nav class="h-full flex flex-col py-8 px-6 gap-1 backdrop-blur-sm bg-slate-50/85 dark:bg-slate-800/85 border-r dark:border-slate-700">
     <div class="font-bold text-xl mb-4 px-3">
       <span class="text-indigo-500">Team</span><span>Runner</span>
     </div>
 
-    <% sidebar_links.each do |item| %>
-      <%= link_to item[:path], aria: { current: current_page?(item[:path]) ? 'page' : nil }, class: "sidebar-link #{current_page?(item[:path]) ? 'sidebar-link-active' : 'sidebar-link-inactive'}" do %>
-        <%= item[:icon].html_safe if item[:icon].present? %>
-        <span><%= item[:name] %></span>
-      <% end %>
+    <%= link_to profile_path, aria: { current: current_page?(profile_path) ? 'page' : nil }, class: "sidebar-link #{current_page?(profile_path) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" do %>
+      <%= inline_svg_tag 'icons/profile.svg', class: 'size-6' %>
+      <span>Profile</span>
+    <% end %>
+
+    <%= link_to teams_path, aria: { current: current_page?(teams_path) ? 'page' : nil }, class: "sidebar-link #{current_page?(teams_path) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" do %>
+      <%= inline_svg_tag 'icons/team.svg', class: 'size-6' %>
+      <span>Teams</span>
+    <% end %>
+
+    <%= link_to root_path, aria: { current: current_page?(root_path) ? 'page' : nil }, class: "sidebar-link #{current_page?(root_path) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" do %>
+      <%= inline_svg_tag 'icons/settings.svg', class: 'size-6' %>
+      <span>Settings</span>
     <% end %>
 
     <%= link_to 'New run', new_run_path, **{ aria: { current: current_page?(new_run_path) ? 'page' : nil } }, class: 'btn btn-primary mt-auto' %>
