--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,6 +36,16 @@
       <p class="text-sm text-slate-600 dark:text-slate-400">This information will not be displayed publicly.</p>
     </div>
 
+    <div class="form-group">
+      <%= f.label :gender, class: 'form-label' do %>
+        <p> Gender
+          <span class="help-text">(optional)</span>
+        </p>
+      <% end %>
+      <%= f.select :gender, User.genders.keys.map { |gender| [gender.humanize, gender] }, { include_blank: true }, class: 'form-select' %>
+      <p class="help-text my-1">Make this blank if you don't want to specify your gender.</p>
+    </div>
+
     <div class='form-group'>
       <%= f.label :email, class: "form-label" %>
       <%= f.email_field :email, autocomplete: "email", class: "form-input", data: { form_validation_target: "email", action: "input->form-validation#validateEmail" } %>
