--- a/app/views/runs/edit.html.erb
+++ b/app/views/runs/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="max-w-3xl mx-auto px-4 my-16">
-  <div class="mb-4 pb-6 border-b">
+  <div class="mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
     <div class="flex items-center justify-between">
       <h1 class="heading">Edit Run</h1>
     </div>
