--- a/app/views/shared/_tab_bar.html.erb
+++ b/app/views/shared/_tab_bar.html.erb
@@ -21,7 +21,7 @@
       <span>Search</span>
     <% end %>
 
-    <%= link_to root_path, aria: { current: current_page?(root_path) ? 'page' : nil }, class: "tab-link #{current_page?(root_path) ? 'tab-link-active' : 'tab-link-inactive'}" do %>
+    <%= link_to edit_user_settings_path, aria: { current: current_page?(edit_user_settings_path) ? 'page' : nil }, class: "tab-link #{current_page?(edit_user_settings_path) ? 'tab-link-active' : 'tab-link-inactive'}" do %>
       <%= inline_svg_tag 'icons/settings.svg', class: 'size-6' %>
       <span>Settings</span>
     <% end %>
