--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,5 @@
 <div class="max-w-3xl mx-auto px-4 my-16">
-  <div class="pb-6 border-b dark:border-slate-700 text-center">
+  <div class="pb-6 border-b border-slate-200 dark:border-slate-700 text-center">
     <h1 class="heading"><%= @team.name %></h1>
     <h2 class="text-lg text-slate-700 my-1 dark:text-slate-400">
       <%= link_to @team.owner.display_name.present? ? @team.owner.display_name : @team.owner.username, @team.owner, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
