--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,10 +9,9 @@
       </p>
     <% end %>
 
-    <!-- TODO: change conditional to check user preferences -->
-    <% if @user.email.present? || @user.phone_number.present? %>
+    <% if @user.settings(:privacy).email_visible || (@user.settings(:privacy).phone_visible && @user.phone_number.present?) %>
       <div class="block sm:flex space-y-4 sm:items-center sm:justify-around mb-8">
-        <% if @user.email.present? %>
+        <% if @user.settings(:privacy).email_visible %>
           <div class="space-y-1">
             <p class="text-sm text-slate-700 dark:text-slate-400 mb-1"><%= @user.email %></p>
             <div class="flex items-center justify-center gap-3">
@@ -23,7 +22,7 @@
           </div>
         <% end %>
 
-        <% if @user.phone_number.present? %>
+        <% if @user.settings(:privacy).phone_visible && @user.phone_number.present? %>
           <div class="space-y-1">
             <p class="text-sm text-slate-700 dark:text-slate-400 mb-1"><%= number_to_phone(@user.phone_number, area_code: true) %></p>
             <div class="flex items-center justify-center gap-3">
