--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,6 +40,13 @@
       <%= f.label :email, class: "form-label" %>
       <%= f.email_field :email, autocomplete: "email", class: "form-input", data: { form_validation_target: "email", action: "input->form-validation#validateEmail" } %>
       <span class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</span>
+      <div class="flex items-center gap-2 mt-2">
+        <%= hidden_field_tag 'user[settings][email_visible]', 'false' %>
+        <%= f.fields_for :settings do |settings_form| %>
+          <%= settings_form.check_box :email_visible, { checked: @user.settings(:privacy).email_visible, class: 'form-input-checkbox' }, true, false %>
+          <%= settings_form.label :email_visible, 'Display email to other users', class: 'select-none text-sm' %>
+        <% end %>
+      </div>
     </div>
 
     <div class="form-group">
@@ -50,6 +57,13 @@
       <% end %>
       <%= f.telephone_field :phone_number, autocomplete: 'tel', class: 'form-input', data: { form_validation_target: "phone", action: "input->form-validation#validatePhone input->form-validation#filterPhoneInput" } %>
       <span class="error-message hidden my-1" data-form-validation-target="phoneError">Invalid phone number</span>
+      <div class="flex items-center gap-2 mt-2">
+        <%= hidden_field_tag 'user[settings][phone_visible]', 'false' %>
+        <%= f.fields_for :settings do |settings_form| %>
+          <%= settings_form.check_box :phone_visible, { checked: @user.settings(:privacy).phone_visible, class: 'form-input-checkbox' }, true, false %>
+          <%= settings_form.label :phone_visible, 'Display phone number to other users', class: 'select-none text-sm' %>
+        <% end %>
+      </div>
     </div>
 
     <div class="form-group">
