--- a/app/views/user_settings/edit.html.erb
+++ b/app/views/user_settings/edit.html.erb
@@ -15,11 +15,11 @@
         <p class="form-label">Display contact information</p>
         <div class="flex items-center gap-2">
           <%= settings_form.check_box :email_visible, { checked: @user.settings(:privacy).email_visible, class: 'form-input-checkbox' }, true, false %>
-          <%= settings_form.label :email_visible, 'Show email', class: 'select-none text-sm' %>
+          <%= settings_form.label :email_visible, 'Display email to other users', class: 'select-none text-sm' %>
         </div>
         <div class="flex items-center gap-2">
           <%= settings_form.check_box :phone_visible, { checked: @user.settings(:privacy).phone_visible, class: 'form-input-checkbox' }, true, false %>
-          <%= settings_form.label :phone_visible, 'Show phone number', class: 'select-none text-sm' %>
+          <%= settings_form.label :phone_visible, 'Display phone number to other users', class: 'select-none text-sm' %>
         </div>
       </div>
     <% end %>
