--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,9 @@
 <div class="max-w-3xl mx-auto px-4 my-10">
-  <h1 class="heading">Account</h1>
+  <div class="mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
+    <div class="flex items-center justify-between">
+      <h1 class="heading">Account</h1>
+    </div>
+  </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div class="bg-blue-50/90 text-blue-700 border-l-4 border-blue-700 py-4 pr-4 pl-6 text-sm dark:bg-blue-50/10 dark:text-blue-50 dark:border-blue-400 mt-6">
