--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class='dark'>
+<html>
   <head>
     <title>TeamRunner</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -9,20 +9,38 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <script>
+      // document.addEventListener('DOMContentLoaded', () => {
+      //   const userTheme = "<%= current_user.settings(:appearance).theme %>";
+      //   if (userTheme === 'dark') {
+      //     document.documentElement.classList.add('dark');
+      //     document.documentElement.classList.remove('light');
+      //   } else if (userTheme === 'light') {
+      //     document.documentElement.classList.add('light');
+      //     document.documentElement.classList.remove('dark');
+      //   } else {
+      //     document.documentElement.classList.remove('dark', 'light');
+      //     if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      //       document.documentElement.classList.add('dark');
+      //     }
+      //   }
+      // });
+    </script>
   </head>
 
-  <body class='font-normal leading-normal text-slate-800 relative selection:bg-indigo-500/40 bg-white dark:bg-slate-900 dark:text-slate-100 antialiased'>
-    <%= render "shared/flash" %>
-    <div class="w-full flex h-svh max-h-svh">
-      <%= render "shared/sidebar" if user_signed_in? %>
-      <div class="flex h-full flex-1 flex-col">
-        <div class="flex h-full flex-col justify-between overflow-y-scroll">
-          <main class="container mx-auto my-24 px-5">
-            <%= yield %>
-          </main>
+    <body class='font-normal leading-normal text-slate-800 relative selection:bg-indigo-500/40 bg-white dark:bg-slate-900 dark:text-slate-100 antialiased'>
+      <%= render "shared/flash" %>
+      <div class="w-full flex h-svh max-h-svh">
+        <%= render "shared/sidebar" if user_signed_in? %>
+        <div class="flex h-full flex-1 flex-col">
+          <div class="flex h-full flex-col justify-between overflow-y-scroll">
+            <main class="container mx-auto my-24 px-5">
+              <%= yield %>
+            </main>
+          </div>
+          <%= render "shared/tab_bar" if user_signed_in? %>
         </div>
-        <%= render "shared/tab_bar" if user_signed_in? %>
       </div>
-    </div>
-  </body>
-</html>
+    </body>
+  </html>
