--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   </head>
 
   <body class='font-normal leading-normal text-slate-800 relative selection:bg-indigo-500/40 bg-white dark:bg-slate-900 dark:text-slate-100 antialiased'>
-    <%= render "shared/flash" %>
+    <%= render "shared/flash" if current_user.settings(:notifications).in_app %>
     <div class="w-full flex h-svh max-h-svh">
       <%= render "shared/sidebar" if user_signed_in? %>
       <div class="flex h-full flex-1 flex-col">
