--- a/app/views/user_settings/edit.html.erb
+++ b/app/views/user_settings/edit.html.erb
@@ -9,6 +9,7 @@
     <!-- Hidden fields to ensure that unchecked checkboxes submit 'false' -->
     <%= hidden_field_tag 'user[settings][email_visible]', 'false' %>
     <%= hidden_field_tag 'user[settings][phone_visible]', 'false' %>
+    <%= hidden_field_tag 'user[settings][in_app]', 'false' %>
 
     <%= form.fields_for :settings do |settings_form| %>
       <div class="my-6">
@@ -27,14 +28,26 @@
         </div>
       </div>
 
-      <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
+      <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
         <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Appearance</h2>
         <p class="text-sm text-slate-600 dark:text-slate-400">Choose your preferred theme.</p>
       </div>
 
       <div class="form-group">
-        <%= settings_form.label :theme, 'Theme', class: 'form-label' %>
+        <%= settings_form.label :theme, 'Theme preference', class: 'form-label' %>
         <%= settings_form.select :theme, options_for_select([['System default', 'system'], ['Light', 'light'], ['Dark', 'dark']], @user.settings(:appearance).theme), {}, data: { theme_target: 'themeSelect', action: 'theme#change' }, class: 'form-select' %>
+      </div>
+
+      <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
+        <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Notifications</h2>
+        <p class="text-sm text-slate-600 dark:text-slate-400">Choose which notifications you receive.</p>
+      </div>
+
+      <div class="form-group">
+        <div class="flex items-center gap-2">
+          <%= settings_form.check_box :in_app, { checked: @user.settings(:notifications).in_app, class: 'form-input-checkbox' }, true, false %>
+          <%= settings_form.label :in_app, 'In app notifications', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
+        </div>
       </div>
     <% end %>
 
