--- a/app/views/teams/_membered_teams.html.erb
+++ b/app/views/teams/_membered_teams.html.erb
@@ -10,7 +10,7 @@
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
       <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You're not a member of any teams yet.</p>
-      <%= link_to 'Find a team', teams_path, class: 'btn btn-white' %>
+      <button type="button" data-action="click->tabs#otherTeamsTab" class="btn btn-white">Find a team</button>
     </div>
   <% end %>
 </div>
