--- a/app/views/teams/_other_teams.html.erb
+++ b/app/views/teams/_other_teams.html.erb
@@ -1,6 +1,6 @@
 <div class="mb-24">
   <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
-    <h1 class="heading">Other Teams</h1>
+    <h1 class="heading">Find Teams</h1>
   </div>
   <% if other_teams.any? %>
     <%= render 'team_list', teams: other_teams %>
