add team require_gender setting

--- a/app/views/teams/_team_stats.html.erb
+++ b/app/views/teams/_team_stats.html.erb
@@ -1,6 +1,6 @@
 <% if team.season_dates? || team.mileage_goal.present? %>
   <div class="pb-3 mt-10">
-    <h1 class="heading pb-6">Team Stats</h1>
+    <h1 class="heading pb-6">Team Info</h1>
     <div class="block sm:flex sm:gap-6 space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
       <% if team.season_dates? %>
         <div class='flex flex-col gap-0.5 items-center justify-center text-center'>
