--- a/app/views/teams/_join_requests.html.erb
+++ b/app/views/teams/_join_requests.html.erb
@@ -1,8 +1,15 @@
 <div class="mt-10 pb-6 border-b dark:border-slate-700">
   <h1 class="heading"><%= pluralize(join_requests.count, 'Join Request') %></h1>
 </div>
-<div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-  <% join_requests.each do |request| %>
-    <%= render 'join_request', request: request %>
-  <% end %>
-</div>
+
+<% if join_requests.any? %>
+  <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+    <% join_requests.each do |request| %>
+      <%= render 'join_request', request: request %>
+    <% end %>
+  </div>
+<% else %>
+  <div class="flex flex-col gap-6 items-center justify-center py-12">
+    <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No new join requests.</p>
+  </div>
+<% end %>
