--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,5 @@
-<div class="max-w-3xl mx-auto px-4 my-16">
-  <div class="pb-6 border-b border-slate-200 dark:border-slate-700 text-center">
+<div data-controller="tabs" data-tabs-active-class="text-slate-900 dark:text-slate-200 bg-slate-200 dark:bg-slate-700/70" data-tabs-default-tab-value="infoTab"  class="max-w-3xl mx-auto px-4 my-16">
+  <div class="pb-6 border-slate-200 dark:border-slate-700 text-center">
     <h1 class="heading"><%= @team.name %></h1>
     <h2 class="text-lg text-slate-700 my-1 dark:text-slate-400">
       <%= link_to @team.owner.display_name.present? ? @team.owner.display_name : @team.owner.username, @team.owner, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
@@ -14,17 +14,41 @@
     </div>
   </div>
 
-  <div class="mb-24">
-    <%= render 'team_stats', team: @team %>
-  </div>
+  <div class="flex flex-wrap items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto">
+    <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="rounded-lg py-2 px-4 flex items-center gap-3 hover:bg-slate-200 dark:hover:bg-slate-700/70">
+      <span>Team Info</span>
+    </button>
 
-  <div class="mb-24">
-    <% if current_user.owns?(@team) && @join_requests.present? %>
-      <%= render 'join_requests', join_requests: @join_requests %>
+    <button type="button" id="membersTab" data-tabs-target="btn" data-action="click->tabs#select" class="rounded-lg py-2 px-4 flex items-center gap-3 hover:bg-slate-200 dark:hover:bg-slate-700/70">
+      <span>Team Members</span>
+    </button>
+
+    <% if current_user.owns?(@team) %>
+      <button type="button" id="joinRequestsTab" data-tabs-target="btn" data-action="click->tabs#select" class="rounded-lg py-2 px-4 flex items-center gap-3 hover:bg-slate-200 dark:hover:bg-slate-700/70">
+        <span>Join Requests</span>
+      </button>
+
+      <button type="button" id="settingsTab" data-tabs-target="btn" data-action="click->tabs#select" class="rounded-lg py-2 px-4 flex items-center gap-3 hover:bg-slate-200 dark:hover:bg-slate-700/70">
+        <span>Team Settings</span>
+      </button>
     <% end %>
   </div>
 
-  <div class="mb-24">
+  <div id="infoTab" data-tabs-target="tab" class="mb-24">
+    <%= render 'team_stats', team: @team %>
+  </div>
+
+  <div id="membersTab" data-tabs-target="tab" class="mb-24 hidden">
     <%= render 'members', members: @members %>
   </div>
+
+  <% if current_user.owns?(@team) %>
+    <div id="joinRequestsTab" data-tabs-target="tab" class="mb-24 hidden">
+      <%= render 'join_requests', join_requests: @join_requests %>
+    </div>
+
+    <div id="settingsTab" data-tabs-target="tab" class="mb-24 hidden">
+      <%= render 'edit_settings', team: @team %>
+    </div>
+  <% end %>
 </div>
