--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <div class="flex flex-wrap items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto">
+  <div class="flex items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto whitespace-nowrap max-w-max mx-auto">
     <button type="button" id="infoTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab">
       <%= inline_svg_tag 'icons/info.svg', class: 'size-5' %>
       <span>Team Info</span>
