add 'tab-container' class

--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -55,3 +55,7 @@
 .tab-link-inactive {
   @apply text-slate-700 dark:text-slate-300 hover:text-indigo-600 dark:hover:text-indigo-500;
 }
+
+.tab-container {
+  @apply flex items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto whitespace-nowrap max-w-max mx-auto;
+}
