--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="accountTab" class="max-w-3xl mx-auto px-4 my-16">
-  <div class="flex flex-wrap items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto">
+  <div class="tab-container">
     <button type="button" id="accountTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab">
       <%= inline_svg_tag 'icons/profile.svg', class: 'size-5' %>
       <span>Account</span>
