--- a/app/assets/stylesheets/custom/forms.css
+++ b/app/assets/stylesheets/custom/forms.css
@@ -22,7 +22,7 @@
   .form-file {
     @apply block w-full text-sm text-slate-500 dark:text-slate-400
     file:mr-4 file:py-2 file:px-4
-    file:rounded-full file:border-0
+    file:rounded-md file:border-0
     file:text-sm file:font-semibold
     file:bg-indigo-50 file:text-indigo-700
     hover:file:bg-indigo-100 dark:file:bg-indigo-600 dark:file:text-slate-100 dark:hover:file:text-slate-100 dark:hover:file:bg-indigo-700;
