--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <div class="max-w-3xl mx-auto px-4 my-16">
   <div class="pb-6 border-b dark:border-slate-700 text-center">
+
+    <%= image_tag @user.avatar, class: 'size-28 sm:size-32 md:size-36 rounded-md drop-shadow-lg dark:drop-shadow-none mx-auto mb-4' if @user.avatar.attached? %>
+
     <h1 class="heading"><%= @user.display_name.present? ? @user.display_name : @user.username %></h1>
     <% if @user.display_name.present? %>
       <h2 class="text-lg my-1 text-slate-700 dark:text-slate-400"><%= @user.username %></h2>
